grammar/miniPascalParser.py
# Generated from miniPascal.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class miniPascalParser ( Parser ):

    grammarFileName = "miniPascal.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PROGRAM'", "'FUNCTION'", "'PROCEDURE'", 
                     "'BEGIN'", "'END'", "'('", "')'", "'['", "']'", "';'", 
                     "':'", "'.'", "'..'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'NOT'", "','", "':='", "<INVALID>", "'='", "'<>'", 
                     "'<'", "'<='", "'>='", "'>'", "'IN'", "'+'", "'-'", 
                     "'OR'", "'*'", "'/'", "'DIV'", "'MOD'", "'AND'", "'IF'", 
                     "'THEN'", "'ELSE'", "'WHILE'", "'DO'", "'INTEGER'", 
                     "'REAL'", "'OF'", "'VAR'", "'ARRAY'" ]

    symbolicNames = [ "<INVALID>", "PROGRAM", "FUNCTION", "PROCEDURE", "BEGIN", 
                      "END", "LP", "RP", "LB", "RB", "SC", "COL", "DOT", 
                      "DOTDOT", "NUM", "NUM_INT", "NUM_REAL", "NOT", "BREAK", 
                      "ASSIGN", "REL", "EQUAL", "NOT_EQUAL", "LT", "LE", 
                      "GE", "GT", "IN", "PLUS", "MINUS", "OR", "STAR", "SLASH", 
                      "DIV", "MOD", "AND", "IF", "THEN", "ELSE", "WHILE", 
                      "DO", "INTEGER", "REAL", "OF", "VAR", "ARRAY", "ID" ]

    RULE_program = 0
    RULE_identifier_list = 1
    RULE_declarations = 2
    RULE_declaration = 3
    RULE_type = 4
    RULE_standard_type = 5
    RULE_subprogram_declarations = 6
    RULE_subprogram_declaration = 7
    RULE_subprogram_head = 8
    RULE_arguments = 9
    RULE_parameter_list = 10
    RULE_compound_statement = 11
    RULE_optional_statements = 12
    RULE_statement_list = 13
    RULE_statement = 14
    RULE_variable = 15
    RULE_procedure_statement = 16
    RULE_expression_list = 17
    RULE_expression = 18
    RULE_simple_expression = 19
    RULE_term = 20
    RULE_factor = 21
    RULE_sign = 22
    RULE_ident = 23
    RULE_add = 24
    RULE_mul = 25

    ruleNames =  [ "program", "identifier_list", "declarations", "declaration", 
                   "type", "standard_type", "subprogram_declarations", "subprogram_declaration", 
                   "subprogram_head", "arguments", "parameter_list", "compound_statement", 
                   "optional_statements", "statement_list", "statement", 
                   "variable", "procedure_statement", "expression_list", 
                   "expression", "simple_expression", "term", "factor", 
                   "sign", "ident", "add", "mul" ]

    EOF = Token.EOF
    PROGRAM=1
    FUNCTION=2
    PROCEDURE=3
    BEGIN=4
    END=5
    LP=6
    RP=7
    LB=8
    RB=9
    SC=10
    COL=11
    DOT=12
    DOTDOT=13
    NUM=14
    NUM_INT=15
    NUM_REAL=16
    NOT=17
    BREAK=18
    ASSIGN=19
    REL=20
    EQUAL=21
    NOT_EQUAL=22
    LT=23
    LE=24
    GE=25
    GT=26
    IN=27
    PLUS=28
    MINUS=29
    OR=30
    STAR=31
    SLASH=32
    DIV=33
    MOD=34
    AND=35
    IF=36
    THEN=37
    ELSE=38
    WHILE=39
    DO=40
    INTEGER=41
    REAL=42
    OF=43
    VAR=44
    ARRAY=45
    ID=46

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(miniPascalParser.PROGRAM, 0)

        def ident(self):
            return self.getTypedRuleContext(miniPascalParser.IdentContext,0)


        def LP(self):
            return self.getToken(miniPascalParser.LP, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(miniPascalParser.Identifier_listContext,0)


        def RP(self):
            return self.getToken(miniPascalParser.RP, 0)

        def SC(self):
            return self.getToken(miniPascalParser.SC, 0)

        def declarations(self):
            return self.getTypedRuleContext(miniPascalParser.DeclarationsContext,0)


        def subprogram_declarations(self):
            return self.getTypedRuleContext(miniPascalParser.Subprogram_declarationsContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(miniPascalParser.Compound_statementContext,0)


        def DOT(self):
            return self.getToken(miniPascalParser.DOT, 0)

        def getRuleIndex(self):
            return miniPascalParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = miniPascalParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(miniPascalParser.PROGRAM)
            self.state = 53
            self.ident()
            self.state = 54
            self.match(miniPascalParser.LP)
            self.state = 55
            self.identifier_list()
            self.state = 56
            self.match(miniPascalParser.RP)
            self.state = 57
            self.match(miniPascalParser.SC)
            self.state = 58
            self.declarations()
            self.state = 59
            self.subprogram_declarations()
            self.state = 60
            self.compound_statement()
            self.state = 61
            self.match(miniPascalParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Identifier_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ident(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniPascalParser.IdentContext)
            else:
                return self.getTypedRuleContext(miniPascalParser.IdentContext,i)


        def BREAK(self, i:int=None):
            if i is None:
                return self.getTokens(miniPascalParser.BREAK)
            else:
                return self.getToken(miniPascalParser.BREAK, i)

        def getRuleIndex(self):
            return miniPascalParser.RULE_identifier_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifier_list" ):
                listener.enterIdentifier_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifier_list" ):
                listener.exitIdentifier_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdentifier_list" ):
                return visitor.visitIdentifier_list(self)
            else:
                return visitor.visitChildren(self)




    def identifier_list(self):

        localctx = miniPascalParser.Identifier_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_identifier_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.ident()
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 64
                self.match(miniPascalParser.BREAK)
                self.state = 65
                self.ident()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniPascalParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(miniPascalParser.DeclarationContext,i)


        def getRuleIndex(self):
            return miniPascalParser.RULE_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclarations" ):
                listener.enterDeclarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclarations" ):
                listener.exitDeclarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarations" ):
                return visitor.visitDeclarations(self)
            else:
                return visitor.visitChildren(self)




    def declarations(self):

        localctx = miniPascalParser.DeclarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==44:
                self.state = 71
                self.declaration()
                self.state = 76
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(miniPascalParser.VAR, 0)

        def identifier_list(self):
            return self.getTypedRuleContext(miniPascalParser.Identifier_listContext,0)


        def COL(self):
            return self.getToken(miniPascalParser.COL, 0)

        def type_(self):
            return self.getTypedRuleContext(miniPascalParser.TypeContext,0)


        def SC(self):
            return self.getToken(miniPascalParser.SC, 0)

        def getRuleIndex(self):
            return miniPascalParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = miniPascalParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77
            self.match(miniPascalParser.VAR)
            self.state = 78
            self.identifier_list()
            self.state = 79
            self.match(miniPascalParser.COL)
            self.state = 80
            self.type_()
            self.state = 81
            self.match(miniPascalParser.SC)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def standard_type(self):
            return self.getTypedRuleContext(miniPascalParser.Standard_typeContext,0)


        def ARRAY(self):
            return self.getToken(miniPascalParser.ARRAY, 0)

        def LB(self):
            return self.getToken(miniPascalParser.LB, 0)

        def NUM(self, i:int=None):
            if i is None:
                return self.getTokens(miniPascalParser.NUM)
            else:
                return self.getToken(miniPascalParser.NUM, i)

        def DOTDOT(self):
            return self.getToken(miniPascalParser.DOTDOT, 0)

        def RB(self):
            return self.getToken(miniPascalParser.RB, 0)

        def OF(self):
            return self.getToken(miniPascalParser.OF, 0)

        def getRuleIndex(self):
            return miniPascalParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = miniPascalParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [41, 42]:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.standard_type()
                pass
            elif token in [45]:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.match(miniPascalParser.ARRAY)
                self.state = 85
                self.match(miniPascalParser.LB)
                self.state = 86
                self.match(miniPascalParser.NUM)
                self.state = 87
                self.match(miniPascalParser.DOTDOT)
                self.state = 88
                self.match(miniPascalParser.NUM)
                self.state = 89
                self.match(miniPascalParser.RB)
                self.state = 90
                self.match(miniPascalParser.OF)
                self.state = 91
                self.standard_type()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Standard_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(miniPascalParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(miniPascalParser.REAL, 0)

        def getRuleIndex(self):
            return miniPascalParser.RULE_standard_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStandard_type" ):
                listener.enterStandard_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStandard_type" ):
                listener.exitStandard_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStandard_type" ):
                return visitor.visitStandard_type(self)
            else:
                return visitor.visitChildren(self)




    def standard_type(self):

        localctx = miniPascalParser.Standard_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_standard_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not(_la==41 or _la==42):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subprogram_declarationsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subprogram_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniPascalParser.Subprogram_declarationContext)
            else:
                return self.getTypedRuleContext(miniPascalParser.Subprogram_declarationContext,i)


        def SC(self, i:int=None):
            if i is None:
                return self.getTokens(miniPascalParser.SC)
            else:
                return self.getToken(miniPascalParser.SC, i)

        def getRuleIndex(self):
            return miniPascalParser.RULE_subprogram_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprogram_declarations" ):
                listener.enterSubprogram_declarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprogram_declarations" ):
                listener.exitSubprogram_declarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprogram_declarations" ):
                return visitor.visitSubprogram_declarations(self)
            else:
                return visitor.visitChildren(self)




    def subprogram_declarations(self):

        localctx = miniPascalParser.Subprogram_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_subprogram_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2 or _la==3:
                self.state = 96
                self.subprogram_declaration()
                self.state = 97
                self.match(miniPascalParser.SC)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subprogram_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subprogram_head(self):
            return self.getTypedRuleContext(miniPascalParser.Subprogram_headContext,0)


        def declarations(self):
            return self.getTypedRuleContext(miniPascalParser.DeclarationsContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(miniPascalParser.Compound_statementContext,0)


        def getRuleIndex(self):
            return miniPascalParser.RULE_subprogram_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprogram_declaration" ):
                listener.enterSubprogram_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprogram_declaration" ):
                listener.exitSubprogram_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprogram_declaration" ):
                return visitor.visitSubprogram_declaration(self)
            else:
                return visitor.visitChildren(self)




    def subprogram_declaration(self):

        localctx = miniPascalParser.Subprogram_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_subprogram_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.subprogram_head()
            self.state = 105
            self.declarations()
            self.state = 106
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subprogram_headContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(miniPascalParser.FUNCTION, 0)

        def ident(self):
            return self.getTypedRuleContext(miniPascalParser.IdentContext,0)


        def arguments(self):
            return self.getTypedRuleContext(miniPascalParser.ArgumentsContext,0)


        def COL(self):
            return self.getToken(miniPascalParser.COL, 0)

        def standard_type(self):
            return self.getTypedRuleContext(miniPascalParser.Standard_typeContext,0)


        def SC(self):
            return self.getToken(miniPascalParser.SC, 0)

        def PROCEDURE(self):
            return self.getToken(miniPascalParser.PROCEDURE, 0)

        def getRuleIndex(self):
            return miniPascalParser.RULE_subprogram_head

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSubprogram_head" ):
                listener.enterSubprogram_head(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSubprogram_head" ):
                listener.exitSubprogram_head(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubprogram_head" ):
                return visitor.visitSubprogram_head(self)
            else:
                return visitor.visitChildren(self)




    def subprogram_head(self):

        localctx = miniPascalParser.Subprogram_headContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_subprogram_head)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(miniPascalParser.FUNCTION)
                self.state = 109
                self.ident()
                self.state = 110
                self.arguments()
                self.state = 111
                self.match(miniPascalParser.COL)
                self.state = 112
                self.standard_type()
                self.state = 113
                self.match(miniPascalParser.SC)
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(miniPascalParser.PROCEDURE)
                self.state = 116
                self.ident()
                self.state = 117
                self.arguments()
                self.state = 118
                self.match(miniPascalParser.SC)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgumentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self, i:int=None):
            if i is None:
                return self.getTokens(miniPascalParser.LP)
            else:
                return self.getToken(miniPascalParser.LP, i)

        def parameter_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniPascalParser.Parameter_listContext)
            else:
                return self.getTypedRuleContext(miniPascalParser.Parameter_listContext,i)


        def RP(self, i:int=None):
            if i is None:
                return self.getTokens(miniPascalParser.RP)
            else:
                return self.getToken(miniPascalParser.RP, i)

        def getRuleIndex(self):
            return miniPascalParser.RULE_arguments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArguments" ):
                listener.enterArguments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArguments" ):
                listener.exitArguments(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArguments" ):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)




    def arguments(self):

        localctx = miniPascalParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 122
                self.match(miniPascalParser.LP)
                self.state = 123
                self.parameter_list()
                self.state = 124
                self.match(miniPascalParser.RP)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniPascalParser.Identifier_listContext)
            else:
                return self.getTypedRuleContext(miniPascalParser.Identifier_listContext,i)


        def COL(self, i:int=None):
            if i is None:
                return self.getTokens(miniPascalParser.COL)
            else:
                return self.getToken(miniPascalParser.COL, i)

        def type_(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniPascalParser.TypeContext)
            else:
                return self.getTypedRuleContext(miniPascalParser.TypeContext,i)


        def SC(self, i:int=None):
            if i is None:
                return self.getTokens(miniPascalParser.SC)
            else:
                return self.getToken(miniPascalParser.SC, i)

        def getRuleIndex(self):
            return miniPascalParser.RULE_parameter_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter_list" ):
                listener.enterParameter_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter_list" ):
                listener.exitParameter_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = miniPascalParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 131
                    self.identifier_list()
                    self.state = 132
                    self.match(miniPascalParser.COL)
                    self.state = 133
                    self.type_()
                    self.state = 134
                    self.match(miniPascalParser.SC) 
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 141
            self.identifier_list()
            self.state = 142
            self.match(miniPascalParser.COL)
            self.state = 143
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BEGIN(self):
            return self.getToken(miniPascalParser.BEGIN, 0)

        def optional_statements(self):
            return self.getTypedRuleContext(miniPascalParser.Optional_statementsContext,0)


        def END(self):
            return self.getToken(miniPascalParser.END, 0)

        def getRuleIndex(self):
            return miniPascalParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_statement" ):
                return visitor.visitCompound_statement(self)
            else:
                return visitor.visitChildren(self)




    def compound_statement(self):

        localctx = miniPascalParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_compound_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(miniPascalParser.BEGIN)
            self.state = 146
            self.optional_statements()
            self.state = 147
            self.match(miniPascalParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Optional_statementsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement_list(self):
            return self.getTypedRuleContext(miniPascalParser.Statement_listContext,0)


        def getRuleIndex(self):
            return miniPascalParser.RULE_optional_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOptional_statements" ):
                listener.enterOptional_statements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOptional_statements" ):
                listener.exitOptional_statements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOptional_statements" ):
                return visitor.visitOptional_statements(self)
            else:
                return visitor.visitChildren(self)




    def optional_statements(self):

        localctx = miniPascalParser.Optional_statementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_optional_statements)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.statement_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Statement_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniPascalParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniPascalParser.StatementContext,i)

